--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 body {
     color: white;
     background: black;
-}header {
-    border: solid 2px white;
+     margin: 0px;
+}
+header {
+    border-bottom: solid 2px rgb(42, 122, 228);
+    padding: 20px;
+    font-size: 32px;
+    color: rgb(42, 122, 228);
 }
