--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 body {
     color: white;
-    background: black;
+    background:rgb(231, 111, 124);
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
